--- a/content/posts/2024-01-15-getting-started-with-nextjs.mdx
+++ b/content/posts/2024-01-15-getting-started-with-nextjs.mdx
@@ -1,4 +1,5 @@
 ---
+slug: "getting-started-with-nextjs"
 title: "Getting Started with Next.js: A Modern Web Framework"
 date: "2024-01-15"
 excerpt: "Discover the power of Next.js and learn how to build fast, scalable web applications with this comprehensive guide to the React-based framework."
