Added a draft flag to posts that prevent it from being published but it appears in while running dev.

--- a/content/posts/2024-01-15-getting-started-with-nextjs.mdx
+++ b/content/posts/2024-01-15-getting-started-with-nextjs.mdx
@@ -5,6 +5,7 @@ date: "2024-01-15"
 excerpt: "Discover the power of Next.js and learn how to build fast, scalable web applications with this comprehensive guide to the React-based framework."
 tags: ["nextjs", "react", "javascript", "web-development"]
 featured_image: "/images/nextjs-intro.jpg"
+draft: true
 ---
 
 # Getting Started with Next.js: A Modern Web Framework
