Added Features to: * Smart link handling to differentiate and render internal, external links, or page anchors. * Optional setting to add a TOC and rendering logic. * Added automatic ID and anchors to headers based on slug of header for better nav.

--- a/content/posts/2024-01-15-getting-started-with-nextjs.mdx
+++ b/content/posts/2024-01-15-getting-started-with-nextjs.mdx
@@ -6,11 +6,15 @@ excerpt: "Discover the power of Next.js and learn how to build fast, scalable we
 tags: ["nextjs", "react", "javascript", "web-development"]
 featured_image: "/images/nextjs-intro.jpg"
 draft: true
+showToc: false
 ---
-
-# Getting Started with Next.js: A Modern Web Framework
-
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+To find out more about [NextJS](https://nextjs.org), visit their website.
+
+You can also check out our article on [Mastering Typescript](/2024/02/02/mastering-typescript-best-practices/) for more information.
+
+You can also try this anchor to the [Project Sturcture](#project-structure)
 
 ## What is Next.js?
 
