Lots of scripted content modification to fix imports.

--- a/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
+++ b/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-houlens-tomb"
 title: "RotF Remix: Houlen’s Tomb"
 date: "2020-10-24"
 excerpt: "Battlemap of a natural cavern with hidden tomb for use in your TTRPGs and 5th edition games."
-featured_image: "https://i.redd.it/c7hhvkh7st961.jpg"
+featured_image: "/images/third_party/c7hhvkh7st961_1755110857229.jpg"
 draft: false
 showToc: false
 ---
