--- a/content/posts/2020-11-28-winter-camp-map.mdx
+++ b/content/posts/2020-11-28-winter-camp-map.mdx
@@ -3,7 +3,7 @@ slug: "winter-camp-map"
 title: "Winter Camp Map"
 date: "2020-11-28"
 excerpt: "A winter camp battlemap for use in your TTRPG and 5th edition games."
-featured_image: "https://i.redd.it/1f1t9adlst961.jpg"
+featured_image: "/images/third_party/1f1t9adlst961_1755110857530.jpg"
 draft: false
 showToc: false
 ---
