--- a/content/posts/2021-01-02-tools-for-effecting-rolls-in-dd.mdx
+++ b/content/posts/2021-01-02-tools-for-effecting-rolls-in-dd.mdx
@@ -3,7 +3,7 @@ slug: "tools-for-effecting-rolls-in-dd"
 title: "Tools to Affect Rolls in D&D"
 date: "2021-01-02"
 excerpt: "An analysis and ranking of different roll effecting mechanisms in 5th edition TTRPGs."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/OR_Screenshot-870x570.jpg"
 draft: false
 showToc: false
 ---
