--- a/content/posts/2021-01-03-progressive-failures-and-rising-tension-in-5th-edition.mdx
+++ b/content/posts/2021-01-03-progressive-failures-and-rising-tension-in-5th-edition.mdx
@@ -44,4 +44,4 @@ Obviously, these are fuzzy situations, as with most rulings in 5th edition, the 
 
 Several folks have linked Matt Colville&#8217;s video &#8220;Many Fail States&#8221; which compliments this as well. Thank you so much for the folks that reached out to send me this link. Adding the video here and recommend you check it out for additional thoughts on the topic. 
 
-{% include video/youtube.html id="l1zaNJrXi5Y" %}
+<YouTubeEmbed id="l1zaNJrXi5Y" />
