--- a/content/posts/2021-01-08-be-friends-with-your-roleplaying-group.mdx
+++ b/content/posts/2021-01-08-be-friends-with-your-roleplaying-group.mdx
@@ -3,7 +3,7 @@ slug: "be-friends-with-your-roleplaying-group"
 title: "Be Friends with your Roleplaying Group"
 date: "2021-01-08"
 excerpt: "Why friendship is so important for TTRPG groups and in 5th edition games."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/OR_Screenshot-870x570.jpg"
 draft: false
 showToc: false
 ---
