--- a/content/posts/2021-01-19-level-up-your-game-with-these-rpgs.mdx
+++ b/content/posts/2021-01-19-level-up-your-game-with-these-rpgs.mdx
@@ -3,7 +3,7 @@ slug: "level-up-your-game-with-these-rpgs"
 title: "Level Up Your Game with these RPGs"
 date: "2021-01-19"
 excerpt: "Results of a survey of RPGs people recommend to expand your roleplaying and DM skills."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/OR_Screenshot-870x570.jpg"
 draft: false
 showToc: false
 ---
