--- a/content/posts/2021-02-25-the-zen-of-awarding-experience-for-roleplaying.mdx
+++ b/content/posts/2021-02-25-the-zen-of-awarding-experience-for-roleplaying.mdx
@@ -3,7 +3,7 @@ slug: "the-zen-of-awarding-experience-for-roleplaying"
 title: "The Zen of Awarding Experience for Roleplaying"
 date: "2021-02-25"
 excerpt: "Guidelines for how to award experience points for roleplaying encounters in your 5th edition game."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/optionalrule-escaping-fireball.png"
 draft: false
 showToc: false
 ---
