--- a/content/posts/2021-03-10-imagery-art-resources-for-rpg-creators.mdx
+++ b/content/posts/2021-03-10-imagery-art-resources-for-rpg-creators.mdx
@@ -3,7 +3,7 @@ slug: "imagery-art-resources-for-rpg-creators"
 title: "Imagery & Art Resources for RPG Creators"
 date: "2021-03-10"
 excerpt: "A list of different art and image resources you can use when creating your TTRPG content."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/optionalrule-escaping-wound.png"
 draft: false
 showToc: false
 ---
