--- a/content/posts/2021-04-15-5e-spell-save-damage-breakdown.mdx
+++ b/content/posts/2021-04-15-5e-spell-save-damage-breakdown.mdx
@@ -3,7 +3,7 @@ slug: "5e-spell-save-damage-breakdown"
 title: "5e Spell Save & Damage Breakdown"
 date: "2021-04-15"
 excerpt: "A breakdown and analysis of spell save distribution among 5th edition spellcasters."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/optionalrule-escaping-wound.png"
 draft: false
 showToc: false
 ---
