--- a/content/posts/2021-04-29-april-2021-experimental-house-rules.mdx
+++ b/content/posts/2021-04-29-april-2021-experimental-house-rules.mdx
@@ -3,7 +3,7 @@ slug: "april-2021-experimental-house-rules"
 title: "April 2021 Experimental House Rules"
 date: "2021-04-29"
 excerpt: "|"
-featured_image: "/images/or_logo.png"
+featured_image: "/images/OR_Screenshot-870x570.jpg"
 draft: false
 showToc: false
 ---
