--- a/content/posts/2023-06-10-campaign-pitch-decks.mdx
+++ b/content/posts/2023-06-10-campaign-pitch-decks.mdx
@@ -63,7 +63,7 @@ Here are a few useful resources:
 * [**Pitch Deck Template**]({% link assets/downloads/TTRPG_Pitch_Deck_Template.pptx %}) I've designed this simple pitch deck template, complete with prompts for a one-page summary. It's provided in PowerPoint format, but you can upload it to Google Drive or open it with LibreOffice.
     * For a real-world example, take a look at this <a href="https://docs.google.com/presentation/d/1kjaK9Q9p90P54E2ITZPf0DHGyaZZMHXYAg52Ar19zp4/edit?usp=sharing" target="_blank">Rime of the Frostmaiden Pitch Deck</a> I used for my campaign.
 * <a href="https://slyflourish.com/one_page_campaign_guide.html" target="_blank">**Writing a One-Page Campaign Guide**</a> by Mike 'Sly Flourish' Shea offers another perspective. While I prefer using the pitch to pique interest and then this tool to provide more context prior to session zero, you could begin with this if you've already garnered sufficient interest.
-* <a href="https://youtu.be/MtH1SP1grxo" target="_blank">**Pitching Your Campaign**</a> by Matt Colville is a fantastic video from his Running the Game series.
+* <YouTubeEmbed id="MtH1SP1grxo" title="**Pitching Your Campaign**" /> by Matt Colville is a fantastic video from his Running the Game series.
 
 ## Conclusion
 
