--- a/content/posts/2024-07-01-dnd-2024-spell-changes.mdx
+++ b/content/posts/2024-07-01-dnd-2024-spell-changes.mdx
@@ -59,4 +59,4 @@ The new Players Handbook brings significant changes to the spell system, expandi
 
 You can see the entire video here on YouTube.
 
-{% include video/youtube.html id="P0rXo-Wp_II" %}
+<YouTubeEmbed id="P0rXo-Wp_II" />
