--- a/content/posts/2024-07-16-twelve-rules-for-players-to-live-by.mdx
+++ b/content/posts/2024-07-16-twelve-rules-for-players-to-live-by.mdx
@@ -8,7 +8,7 @@ draft: false
 showToc: false
 ---
 
-A few weeks ago, a great thread was <a href="https://x.com/jangowolf/status/1805978656533057793" target="_blank">floating around on X</a> (*formerly known as Twitter and largely still called that but... oh, nevermind*) lamenting the lack of meaningful Player Guides on TTRPG blogs. We have a plethora of guides on how to be a great Game Master but few on how to be a great player. Okay, that's not entirely true - there are plenty of YouTube videos by <a href="https://www.youtube.com/watch?v=SiywNrOABbQ" target="_blank">DungeonCraft</a> or <a href="https://www.youtube.com/watch?v=UiCxyBi8lRk&list=PL25p5gPY6qKVWbFtR-Crct97hg5DFekZQ&index=8" target="_blank">Seth Skorkowsky</a> offering great player advice, and a few blog posts on the topic, but they're drowned out by the volume of DM advice content.
+A few weeks ago, a great thread was <a href="https://x.com/jangowolf/status/1805978656533057793" target="_blank">floating around on X</a> (*formerly known as Twitter and largely still called that but... oh, nevermind*) lamenting the lack of meaningful Player Guides on TTRPG blogs. We have a plethora of guides on how to be a great Game Master but few on how to be a great player. Okay, that's not entirely true - there are plenty of YouTube videos by <YouTubeEmbed id="SiywNrOABbQ" title="DungeonCraft" /> or <YouTubeEmbed id="UiCxyBi8lRk&list=PL25p5gPY6qKVWbFtR-Crct97hg5DFekZQ&index=8" title="Seth Skorkowsky" /> offering great player advice, and a few blog posts on the topic, but they're drowned out by the volume of DM advice content.
 
 These guides universally offer similar advice: show up on time, be prepared, don't be "that guy," and more. They're all right, of course.
 
