--- a/content/posts/2024-09-04-mounted-combat-in-shadowdark.mdx
+++ b/content/posts/2024-09-04-mounted-combat-in-shadowdark.mdx
@@ -11,7 +11,7 @@ showToc: false
 Greetings, brave crawlers! Whether you're charging into battle, making daring escapes, or simply looking for a reliable way to haul your hard-earned loot, mounts are an essential part of any fantasy adventurer's toolkit. They add a thrilling dimension to gameplay, especially during overland adventures where a simple yet engaging mounted combat system can elevate the excitement of your <a href="https://www.thearcanelibrary.com/pages/shadowdark" target="_blank">Shadowdark</a> game.
 
 In the spirit of Shadowdark's minimalist yet evocative style, I've crafted these concise rules for mounted combat and travel. They're designed to seamlessly integrate with the Shadowdark TTRPG, offering a brief but descriptive framework that expands your options without bogging down gameplay.
-These mounted combat rules are part of a larger project, where I'm compiling various travel-related mechanics. In addition to what you'll find here, I've posted some rules for [hebs & foraging]({% link _posts/2024-08-26-expanded-herb-list-for-shadowdark.md %}), and will be writing some rules on setting up camps, and interactive travel. The goal is to create a comprehensive supplement that enriches your overland adventures in the Shadowdark universe.
+These mounted combat rules are part of a larger project, where I'm compiling various travel-related mechanics. In addition to what you'll find here, I've posted some rules for [herbs & foraging](/2024/08/26/expanded-herb-list-for-shadowdark/), and will be writing some rules on setting up camps, and interactive travel. The goal is to create a comprehensive supplement that enriches your overland adventures in the Shadowdark universe.
 
 I'm excited to share these rules with you and eager to hear your thoughts! Please reach out to me on <a href="https://x.com/optionalrule" target="_blank">X (Twitter)</a> to share your feedback, experiences, or suggestions. I'm also in the Shadowdark Discord, so hit me up there. Your input is invaluable as we continue to expand and refine the Shadowdark experience.
 
@@ -70,8 +70,6 @@ Horses are the most common mount or pack animal in most setting, but by no means
 > **Surefooted.** ADV on any roll to avoid tripping or falling.
 > 
 > **Stout.** (*Mules only*) Mules carry quadruple their normal Gear Slots when riderless.
-{:.sd-stat-block}
-{:.wide}
 
 > ## War Horse
 > *Bred for battle and Fury. Neutral*
@@ -87,8 +85,6 @@ Horses are the most common mount or pack animal in most setting, but by no means
 > **Fearless.** ADV on Morale checks.
 > 
 > **Fury.** Attack with hooves during rider’s turn.
-{:.sd-stat-block}
-{:.wide}
 
 ## Gearing Up Your Mount
 
@@ -99,7 +95,6 @@ Mounts require a bit of gear and care. Tack is generally required to ride or gui
 | Tack (Saddle, stirrups, bridle, halter, rein, bit, and harness) | 15 gp | 2 |
 | Barding (Leather, Chain, or Plate armor) | 4x | 2x  |
 | Feed (3 days) | 2 sp | 1 |
-{:.table .table-striped}
 
 #### Buying a Mount
 
@@ -109,7 +104,6 @@ Mounts require a bit of gear and care. Tack is generally required to ride or gui
 | Mule      | 25 gp  |
 | Pony      | 20 gp  |
 | War Horse | 300 gp |
-{: .container .table .table-striped}
 
 ## Adding Flavor: Mount Coats
 
@@ -127,7 +121,7 @@ Want to make your mount stand out? Roll a d10 and consult this table for your mo
 | 8   | Pinto | Dramatic large patches of white and dark colors (often black, brown, or chestnut). Each pattern is unique, like a living canvas. |
 | 9   | Buckskin | A golden tan body with black mane, tail, and lower legs. Often associated with tough, enduring mounts of the frontier. |
 | 10  | Appaloosa | Distinctive spotted pattern, often with a white or light-colored body covered in dark spots. Historically bred by the Nez Perce people and known for their intelligence and stamina. |
-{:.table}
+
 
 So there you have it, brave adventurers! With these rules, you're ready to thunder across the battlefield, charge down your foes, and explore the far reaches of your Shadowdark world on horseback. Remember, a well-trained mount is more than just a means of transportation—it's a loyal companion and a formidable weapon in the right hands.
 
