--- a/content/posts/2024-10-01-a-return-to-greyhawk.mdx
+++ b/content/posts/2024-10-01-a-return-to-greyhawk.mdx
@@ -8,7 +8,7 @@ draft: false
 showToc: false
 ---
 
-When you're leafing through the pages of the upcoming <a href="https://www.youtube.com/watch?v=xWNT9N3cE2U&t=1s" target="_blank">Dungeon Master's Guide</a>, set to hit shelves this November as part of D&D 2024. The familiar scent of fresh ink and new possibilities filling the air, you might notice something different. The default setting isn't the Forgotten Realms in the latest edition. Instead, you're reading about a world called Greyhawk. For some of you, this name might spark a nostalgic gleam in your eye. For others, it might be a curious first encounter. So what is with the new default setting for DnD 2024? Lets take a journey to the <a href="https://greyhawkonline.com/" target="_blank">World of Greyhawk</a>, D&D's original campaign setting, and find out what we're in for.
+When you're leafing through the pages of the upcoming Dungeon Master's Guide, set to hit shelves this November as part of D&D 2024. The familiar scent of fresh ink and new possibilities filling the air, you might notice something different. The default setting isn't the Forgotten Realms in the latest edition. Instead, you're reading about a world called Greyhawk. For some of you, this name might spark a nostalgic gleam in your eye. For others, it might be a curious first encounter. So what is with the new default setting for DnD 2024? Lets take a journey to the <a href="https://greyhawkonline.com/" target="_blank">World of Greyhawk</a>, D&D's original campaign setting, and find out what we're in for.
 
 <img src="/images/greyhawksupplament_480x754.webp" alt="Cover image of the original Greyhawk Supplement." width="480" height="754" />
 
