--- a/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
+++ b/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
@@ -3,7 +3,7 @@ slug: "tresendar-manor-above-ground"
 title: "Tresendar Manor Above Ground"
 date: "2020-11-03"
 excerpt: "Above group battlemap of Tresendar Manor in Phandalin from 5th edition Lost Mines of Phandever or Dragon of Icespire Peak."
-featured_image: "https://i.redd.it/66rci2cg5cx51.jpg"
+featured_image: "/images/third_party/66rci2cg5cx51_1755110857376.jpg"
 draft: false
 showToc: false
 ---
