--- a/content/posts/2020-12-09-rime-of-the-frostmaiden-remixes.mdx
+++ b/content/posts/2020-12-09-rime-of-the-frostmaiden-remixes.mdx
@@ -3,7 +3,7 @@ slug: "rime-of-the-frostmaiden-remixes"
 title: "Rime of the Frostmaiden Remixes"
 date: "2020-12-09"
 excerpt: "Thoughts on why remixes are so important for 5th edition Icewind Dale Rime of the Frostmaiden."
-featured_image: "https://media.dnd.wizards.com/styles/product_image_left_scale/public/images/product/YiKwcXaQkJ.png"
+featured_image: "/images/optionalrule-escaping-wound.png"
 draft: false
 showToc: false
 ---
