--- a/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
+++ b/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-lake-monster"
 title: "RotF Remix: Lake Monster"
 date: "2020-12-24"
 excerpt: "A reworking of the Lake Monster quest from 5th edition Icewind Dale Rime of the Frostmaiden."
-featured_image: "https://media.dndbeyond.com/compendium-images/idrotf/7Av7Gi2DxDtdzZPt/01-006.monster.png"
+featured_image: "/images/third_party/01-006_monster_1755110857578.png"
 draft: false
 showToc: false
 ---
