--- a/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
+++ b/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-heart-of-winter-supernatural-regions"
 title: "RotF Remix: Heart of Winter Supernatural Regions"
 date: "2021-01-04"
 excerpt: "Winter themed supernatural region effects to use in your 5th edition Icewind Dale Rime of the Frostmaiden game."
-featured_image: "https://media.dndbeyond.com/compendium-images/idrotf/7Av7Gi2DxDtdzZPt/00-001.png"
+featured_image: "/images/third_party/00-001_1755110857665.png"
 draft: false
 showToc: false
 ---
