--- a/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
+++ b/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-foaming-mugs"
 title: "RotF Remix: Foaming Mugs"
 date: "2021-01-12"
 excerpt: "My modification to the Foaming Mugs quest from the 5th edition module, Rime of the Frostmaiden."
-featured_image: "https://media.dndbeyond.com/compendium-images/idrotf/7Av7Gi2DxDtdzZPt/00-004.yeti-splash.png"
+featured_image: "/images/third_party/00-004_yeti-splash_1755110857918.png"
 draft: false
 showToc: false
 ---
