--- a/content/posts/2021-03-26-thinking-critically-on-agency.mdx
+++ b/content/posts/2021-03-26-thinking-critically-on-agency.mdx
@@ -3,7 +3,7 @@ slug: "thinking-critically-on-agency"
 title: "Thinking Critically on Agency"
 date: "2021-03-26"
 excerpt: "Link to my interview on the Thinking Critically podcast discussing the topic of player agency in 5th edition and TTRPGs."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/optionalrule-escaping-fireball.png"
 draft: false
 showToc: false
 ---
@@ -11,7 +11,7 @@ showToc: false
 I greatly enjoyed my recent interview on the podcast, <a href="https://www.thinkingcritically.co.uk/agency/" target="_blank" rel="noreferrer noopener">Thinking Critically: A D&D Discussion</a>. We talk about agency in games in all it&#8217;s many forms, what agency is and isn&#8217;t, where it ends, how it&#8217;s traded, and how it interacts with game mechanics. I highly recommend the podcast for anyone running tabletop RPGs of any kind. 
 
 <figure class="figure">
-<iframe src="https://anchor.fm/tc-dnd/embed/episodes/Agency-esor47/a-a527m7a" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+<MediaEmbed url="https://anchor.fm/tc-dnd/embed/episodes/Agency-esor47/a-a527m7a" title="Embedded content" /></iframe>
 
 <figcaption class="fig-caption">Spotify Link to Podcast Episode</figcaption></figure>
 <figure>
