--- a/content/posts/2021-12-17-wotc-errata-debate.mdx
+++ b/content/posts/2021-12-17-wotc-errata-debate.mdx
@@ -3,7 +3,7 @@ slug: "wotc-errata-debate"
 title: "The WoTC Errata, Long Past Due"
 date: "2021-12-17"
 excerpt: "My take on the recent Wizards of the Coast Dungeons and Dragons 5e errata."
-featured_image: "/images/or_logo.png"
+featured_image: "/images/optionalrule-escaping-fireball.png"
 draft: false
 showToc: false
 ---
