--- a/content/posts/2021-01-29-safety-consent-rpg-checklist.mdx
+++ b/content/posts/2021-01-29-safety-consent-rpg-checklist.mdx
@@ -23,7 +23,7 @@ Before I make a few short comments below, here are some resources you can use at
 
 **Great External Resources**
 
-  * [Consent in Gaming](https://www.montecookgames.com/consent-in-gaming/) from MCG by Sean K. Reynolds & Shanna Germain (
+  * [Consent in Gaming](https://www.montecookgames.com/consent-in-gaming/) from MCG by Sean K. Reynolds & Shanna Germain 
   * [TTRPG Saftey Toolkit Quick Reference](https://i.4pcdn.org/tg/1583202183294.pdf) by Kienna Shaw (Free PDF)
   * [X-Card System](https://docs.google.com/document/d/1SB0jsx34bWHZWbnNIVVuMjhDkrdFGo1_hSC2BWPlI3A/mobilebasic) by John Stavropoulos, is a system for use during a session to back out of situations.
   * [Script Change RPG Toolbox](https://briebeau.itch.io/script-change) by Beau Jágr Sheldon, is a great name-your-own-price resource for modifying things on the fly!
@@ -44,7 +44,7 @@ The reason this is so important now is that more new people are entering the hob
 
 When I recruit for a campaign, work with a new group, introduce new members, or even introduce a new campaign to a group I know, I use a Baseline Safety & Consent list. I use this first, before I even survey the group for their own views. In this way I'm able to establish things we don't even have to discuss because I wont be making it part of my world as a DM. It also helps me establish lines with the players they shouldn't be planning to go past. In all honesty, I've had players in my game exceed my limits WAY more than I have exceeded theirs, and I am not a particularly squeamish guy. Trust me, if you are a DM, this is important for you and for your group.
 
-By way of example, you can see the Baseline Safety & Consent slide from my most recent [Campaign Pitch Deck](https://docs.google.com/presentation/d/1kjaK9Q9p90P54E2ITZPf0DHGyaZZMHXYAg52Ar19zp4/edit?usp=sharing) below. I'll write a whole post on Pitch Decks some-day, but not to-day. Note this is a start of a conversation, not an end to one. I put these in a slide to get me to the next step of talking in depth about this with the players.<
+By way of example, you can see the Baseline Safety & Consent slide from my most recent [Campaign Pitch Deck](https://docs.google.com/presentation/d/1kjaK9Q9p90P54E2ITZPf0DHGyaZZMHXYAg52Ar19zp4/edit?usp=sharing) below. I'll write a whole post on Pitch Decks some-day, but not to-day. Note this is a start of a conversation, not an end to one. I put these in a slide to get me to the next step of talking in depth about this with the players.
 
 
 ![a bullet list of safety elements](/images/SafetyAndConcent.-960x540.jpg)
