--- a/content/posts/2021-03-26-thinking-critically-on-agency.mdx
+++ b/content/posts/2021-03-26-thinking-critically-on-agency.mdx
@@ -10,15 +10,10 @@ showToc: false
 
 I greatly enjoyed my recent interview on the podcast, [Thinking Critically: A D&D Discussion](https://www.thinkingcritically.co.uk/agency/). We talk about agency in games in all it's many forms, what agency is and isn't, where it ends, how it's traded, and how it interacts with game mechanics. I highly recommend the podcast for anyone running tabletop RPGs of any kind. 
 
+<MediaEmbed url="https://anchor.fm/tc-dnd/embed/episodes/Agency-esor47/a-a527m7a" title="Thinking Critically Podcast Episode" />
 
-<MediaEmbed url="https://anchor.fm/tc-dnd/embed/episodes/Agency-esor47/a-a527m7a" title="Embedded content" /></iframe>
+## Spotify Link to Podcast Episode
 
-Spotify Link to Podcast Episode
+> For this insightful episode I am joined by Scott, a.k.a [@optionalrule](https://optionalrule.com/), and we talk about the incredibly important topic of agency. It's a term that gets bandied around a lot, carrying with it an awful lot of weight. In this hour, Scott and I begin to unpack some of that weight and how it can drastically and dramatically impact the gameplay experience. Starting by clarifying some common misconceptions and misinterpretations, we define what &#8220;agency&#8221; _really_ is within the TTRPG experience. When you have so many options on the table, where do you draw the line? Indeed, the GM is player too with their own pool of agency, and it's that trading of agency which leads to interesting and dynamic games. We finish on the importance of trust, something not always directly associated with agency, but the two are often intrinsically linked. The more you trust each other, the more you're willing to part with to increase the enjoyment of everyone at the table, and I can't think of a more poetic explanation than that!
 
-
-
-> For this insightful episode I am joined by Scott, a.k.a [@optionalrule](https://optionalrule.com/), and we talk about the incredibly important topic of agency. It's a term that gets bandied around a lot, carrying with it an awful lot of weight. In this hour, Scott and I begin to unpack some of that weight and how it can drastically and dramatically impact the gameplay experience. Starting by clarifying some common misconceptions and misinterpretations, we define what &#8220;agency&#8221; _really_ is within the TTRPG experience. When you have so many options on the table, where do you draw the line? Indeed, the GM is player too with their own pool of agency, and it's that trading of agency which leads to interesting and dynamic games. We finish on the importance of trust, something not always directly associated with agency, but the two are often intrinsically linked. The more you trust each other, the more you're willing to part with to increase the enjoyment of everyone at the table, and I can't think of a more poetic explanation than that!
-
-
-
-Thinking Critically Show Notes
+## Thinking Critically Show Notes
