--- a/content/posts/2021-04-07-monster-resistance-totals-in-5e.mdx
+++ b/content/posts/2021-04-07-monster-resistance-totals-in-5e.mdx
@@ -36,37 +36,37 @@ I've shared a [spreadsheet of this chart](https://docs.google.com/spreadsheets/d
   * Poison and Poisoned resistance was very high. Again, the number of spells and abilities that do poison damage are very few. Only 3 spells in the PHB do poison damage.
   * Many people on twitter commented on the relatively few weaknesses. I like this however as monsters are difficult to keep around for more than a few rounds already. If weakness was common, too many Boss fights would be one round combats.
 
-<table class="table table-hover table-striped data-table">
+<table>
    <thead>
-   <tr>
-      <th> </th>
-      <th colspan="3">< 5</th>
-      <th colspan="3">6 - 10</th>
-      <th colspan="3">11-15</th>
-      <th colspan="3">16 - 20</th>
-      <th colspan="3">20 <</th>
-      <th colspan="3">Totals</th>
-    </tr>
-    <tr>
-      <th>Dmg/Condition</th>
-      <th>W</th>
-      <th>R</th>
-      <th>I</th>
-      <th>W</th>
-      <th>R</th>
-      <th>I</th>
-      <th>W</th>
-      <th>R</th>
-      <th>I</th>
-      <th>W</th>
-      <th>R</th>
-      <th>I</th>
-      <th>W</th>
-      <th>R</th>
-      <th>I</th>
-      <th>W</th>
-      <th>R</th>
-      <th>I</th>
+      <tr>
+         <th> </th>
+         <th colspan="3">5</th>
+         <th colspan="3">6 - 10</th>
+         <th colspan="3">11-15</th>
+         <th colspan="3">16 - 20</th>
+         <th colspan="3">20 </th>
+         <th colspan="3">Totals</th>
+      </tr>
+      <tr>
+         <th>Dmg/Condition</th>
+         <th>W</th>
+         <th>R</th>
+         <th>I</th>
+         <th>W</th>
+         <th>R</th>
+         <th>I</th>
+         <th>W</th>
+         <th>R</th>
+         <th>I</th>
+         <th>W</th>
+         <th>R</th>
+         <th>I</th>
+         <th>W</th>
+         <th>R</th>
+         <th>I</th>
+         <th>W</th>
+         <th>R</th>
+         <th>I</th>
       </tr>
    </thead>
    <tbody>
